[package]
name = "vote-inclusion-analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "gzip", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
colored = "3.0"
solana-client = "2.2.7"
solana-sdk = "2.2.2"
bs58 = "0.5"
bincode = "1.3"
solana-program = "2.2.1"
hex = "0.4"
rand = "0.9.1"
anyhow = "1.0"
indicatif = "0.17"